--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,35 @@
 .App {
   height: 95vh;
 }
+
+.page {
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  position: fixed;
+}
+
+.fade-enter {
+  opacity: 0;
+  /* transform: translate(-85px, 0); */
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  /* transform: translate(0, 0); */
+
+  transition: opacity 250ms ease-out, transform 300ms ease;
+}
+
+.fade-exit {
+  opacity: 1;
+  /* transform: translate(0, 0); */
+}
+
+.fade-exit.fade-exit-active {
+  opacity: 0;
+  /* transform: translate(30px, 0); */
+
+  transition: opacity 250ms ease-out, transform 300ms ease;
+}
